#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.
# 
#  Copyright International Business Machines Corp. 2008
# 
#  Authors:	Balbir Singh <balbir@linux.vnet.ibm.com>
#  This program is free software; you can redistribute it and/or modify it
#  under the terms of version 2.1 of the GNU Lesser General Public License
#  as published by the Free Software Foundation.
# 
#  This program is distributed in the hope that it would be useful, but
#  WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
#
AC_PREREQ(2.61)
AC_INIT([control groups library and utilities], 0.32.2,
	[http://sourceforge.net/tracker/?group_id=218421&atid=1043649])
AC_CONFIG_SRCDIR([wrapper.c])
AC_CONFIG_HEADER([config.h])

# Process command line options
AC_ARG_ENABLE([debug],
	[AC_HELP_STRING([--enable-debug],
		[enable extra debugging output [default=no]])],
	[AC_DEFINE([CGROUP_DEBUG], [],
		[Define to enable extra debugging output.])],
	[])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_YACC
if test "$YACC" != byacc; then
	YACC="$SHELL $missing_dir/missing byacc"
	AC_SUBST(YACC, "byacc")
fi
AC_PROG_LEX

# Checks for libraries.
# FIXME: Replace `main' with a function in `-lcgroup':
AC_CHECK_LIB([cgroup], [cgroup_create_cgroup])

# Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS([limits.h mntent.h stdlib.h string.h sys/mount.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_TYPE_UID_T
AC_C_INLINE
AC_TYPE_INT64_T
AC_TYPE_PID_T

# Checks for library functions.
AC_FUNC_CHOWN
AC_FUNC_GETMNTENT
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_FUNC_STAT
AC_CHECK_FUNCS([getmntent hasmntopt memset mkdir rmdir strdup])

AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([libcgroup.spec:libcgroup.spec.in])
AC_CONFIG_FILES([mktarball:mktarball.in])
AC_OUTPUT
