EXTRA_DIST = cgconfigparser_simple \
             cgconfigparser_conf_files_tests \
             cgconfigparser_conf_files/cgconfig.conf.5.ex1 \
             cgconfigparser_conf_files/cgconfig.conf.5.ex2 \
             cgconfigparser_conf_files/cgconfig.conf.5.ex3 \
             cgconfigparser_conf_files/cgconfig.conf.5.ex4 \
             cgconfigparser_conf_files/permissions.conf \
	     cgconfigparser_multiconfig \
	     cgclear_config_multi \
	     cgclear_config_one

TESTS = cgconfigparser_simple cgconfigparser_conf_files_tests permissions \
	cgconfigparser_multiconfig cgclear_config_multi cgclear_config_one

