EXTRA_DIST = cgconfigparser_simple \
             cgconfigparser_conf_files_tests \
             cgconfigparser_conf_files/cgconfig.conf.5.ex1 \
             cgconfigparser_conf_files/cgconfig.conf.5.ex2 \
             cgconfigparser_conf_files/cgconfig.conf.5.ex3 \
             cgconfigparser_conf_files/cgconfig.conf.5.ex4 \
             cgconfigparser_conf_files/permissions.conf \
	     cgconfigparser_multiconfig \
	     cgclear_config_multi \
	     cgclear_config_one \
	     permissions \
	     cgconfigparser_conf_files/permissions_default1.conf \
	     cgconfigparser_conf_files/permissions_default2.conf \
	     cgconfigparser_conf_files/permissions_default3.conf \
	     cgconfigparser_conf_files/permissions_default4.conf \
	     multiconfig/1.conf \
	     multiconfig/2.conf \
	     multiconfig/3.conf \
	     multiconfig/4.conf \
	     multiconfig/5.conf \
	     cgclear/cgclear_config_multi_1.conf \
	     cgclear/cgclear_config_multi_2.conf \
	     cgclear/cgclear_config_multi_3.conf \
	     cgclear/cgclear_config_one.conf

# The legacy tests have been disabled because they do not successfully run
# on Travis CI.
#TESTS = cgconfigparser_simple cgconfigparser_conf_files_tests permissions \
#	cgconfigparser_multiconfig cgclear_config_multi cgclear_config_one

